praper to deploy

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <style>
       *{
         margin:0 ;
@@ -21,7 +21,7 @@
     }
     </style>
 
-    <title>React App</title>
+    <title>Natural Wood</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
